--- a/src/app/modules/price/price-card/price-card.component.html
+++ b/src/app/modules/price/price-card/price-card.component.html
@@ -13,11 +13,10 @@
       <h3 class="text-sm text-gray-700">
         <div class="cursor-pointer">
           <span aria-hidden="true" class="absolute inset-0"></span>
-          Basic Tee
+          {{ tool?.name }}
         </div>
       </h3>
-      <p class="mt-1 text-sm text-gray-500">Black</p>
     </div>
-    <p class="text-sm font-medium text-gray-900">$35</p>
+    <p class="text-sm font-medium text-gray-900">{{ tool?.price }}₸</p>
   </div>
 </div>
