--- a/src/app/modules/price/price.component.html
+++ b/src/app/modules/price/price.component.html
@@ -2,14 +2,33 @@
   <div
     class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8"
   >
-    <h2 class="text-2xl font-bold tracking-tight text-gray-900">
-      Customers also purchased
-    </h2>
+    <div class="flex flex-col items-center">
+      <h2 class="text-2xl font-bold tracking-tight text-gray-900">
+        Аренда инструментов
+      </h2>
+      <div class="mt-4">
+        <label
+          for="search-tool"
+          class="block text-center text-sm font-medium text-gray-700"
+          >Поиск инструментов</label
+        >
+        <div class="relative mt-1 rounded-md shadow-sm">
+          <input
+            [formControl]="name"
+            type="text"
+            name="name"
+            id="search-tool"
+            class="block w-full rounded-md border-gray-300 pl-2 pr-12 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"
+            placeholder="Название"
+          />
+        </div>
+      </div>
+    </div>
     <div
       class="mt-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8"
     >
       <app-price-card
-        *ngFor="let price of tools"
+        *ngFor="let price of tools | searchByField: nameSearch:'name'"
         [tool]="price"
       ></app-price-card>
     </div>
